--- a/_includes/dc/who.html
+++ b/_includes/dc/who.html
@@ -49,8 +49,11 @@ All other workshops
 
 <p id="who">
   <strong>Who:</strong>
-  The course is aimed at graduate students and other researchers.
-  <strong>
+This is a workshop for people who are interested and curious in creating 
+dynamic and useful displays of spatial data for broad audiences as relates to
+the goals of COBALT. No prior experience with R or GIS is necessary, although
+some comfort with computers and all of the problems they throw our way will
+be necessary.  <strong>
     You don't need to have any previous knowledge of the tools
     that will be presented at the workshop.
   </strong>
