--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -17,19 +17,19 @@ The schedule for the different curricula are listed here:
 	<td>Before starting</td>
 	<td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
       </tr>
-      <tr><td>Morning</td> <td> <a href="https://datacarpentry.org/astronomy-python/01-query.html/">Basic Queries</a></td></tr>
-      <tr><td> </td><td><a href="https://datacarpentry.org/astronomy-python/02-coords.html">Coordinate Transformations</a></td></tr>
-      <tr><td>Afternoon</td> <td> <a href="https://datacarpentry.org/astronomy-python/03-transform.html">Plotting and Tabular Data</a></td></tr>
-      <tr><td> </td> <td> <a href="https://datacarpentry.org/astronomy-python/04-motion.html">Plotting and Pandas</a></td></tr>
+      <tr><td>Morning</td> <td> <a href="https://cobalt-casco.github.io/astronomy-python/01-query.html/">Basic Queries</a></td></tr>
+      <tr><td> </td><td><a href="https://cobalt-casco.github.io/astronomy-python/02-coords.html">Coordinate Transformations</a></td></tr>
+      <tr><td>Afternoon</td> <td> <a href="https://cobalt-casco.github.io/astronomy-python/03-transform.html">Plotting and Tabular Data</a></td></tr>
+      <tr><td> </td> <td> <a href="https://cobalt-casco.github.io/astronomy-python/04-motion.html">Plotting and Pandas</a></td></tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr><td>Morning</td><td><a href="https://datacarpentry.org/astronomy-python/05-select.html">Transform and Select</a></td></tr>
-      <tr><td> </td> <td> <a href="https://datacarpentry.org/astronomy-python/06-join.html">Join</a></td></tr>
-      <tr><td>Afternoon</td><td><a href="https://datacarpentry.org/astronomy-python/07-photo.html">Photometry</a></td></tr>
-      <tr><td> </td><td><a href="https://datacarpentry.org/astronomy-python/08-plot.html">Visualization</a></td></tr>
+      <tr><td>Morning</td><td><a href="https://cobalt-casco.github.io/astronomy-python/05-select.html">Transform and Select</a></td></tr>
+      <tr><td> </td> <td> <a href="https://cobalt-casco.github.io/astronomy-python/06-join.html">Join</a></td></tr>
+      <tr><td>Afternoon</td><td><a href="https://cobalt-casco.github.io/astronomy-python/07-photo.html">Photometry</a></td></tr>
+      <tr><td> </td><td><a href="https://cobalt-casco.github.io/astronomy-python/08-plot.html">Visualization</a></td></tr>
     </table>
   </div>
 </div>
@@ -43,20 +43,20 @@ The schedule for the different curricula are listed here:
 	<td>Before starting</td>
 	<td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
       </tr>
-      <tr><td>Morning</td> <td> <a href="https://datacarpentry.org/image-processing/01-introduction.html">Introduction</a></td></tr>
-      <tr><td> </td><td><a href="https://datacarpentry.org/image-processing/02-image-basics.html">Image Basics</a></td></tr>
-      <tr><td> </td><td><a href="https://datacarpentry.org/image-processing/03-skimage-images.html">Working with skimage</a></td></tr>
-      <tr><td>Afternoon</td> <td> <a href="https://datacarpentry.org/image-processing/04-drawing.html">Drawing and Bitwise Operations</a></td></tr>
-      <tr><td> </td> <td> <a href="https://datacarpentry.org/image-processing/05-creating-histograms.html">Creating Histograms</a></td></tr>
+      <tr><td>Morning</td> <td> <a href="https://cobalt-casco.github.io/image-processing/01-introduction.html">Introduction</a></td></tr>
+      <tr><td> </td><td><a href="https://cobalt-casco.github.io/image-processing/02-image-basics.html">Image Basics</a></td></tr>
+      <tr><td> </td><td><a href="https://cobalt-casco.github.io/image-processing/03-skimage-images.html">Working with skimage</a></td></tr>
+      <tr><td>Afternoon</td> <td> <a href="https://cobalt-casco.github.io/image-processing/04-drawing.html">Drawing and Bitwise Operations</a></td></tr>
+      <tr><td> </td> <td> <a href="https://cobalt-casco.github.io/image-processing/05-creating-histograms.html">Creating Histograms</a></td></tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr><td>Morning</td><td><a href="https://datacarpentry.org/image-processing/06-blurring.html">Blurring Images</a></td></tr>
-      <tr><td> </td> <td> <a href="https://datacarpentry.org/image-processing/07-thresholding.html">Thresholding</a></td></tr>
-      <tr><td>Afternoon</td><td><a href="https://datacarpentry.org/image-processing/08-connected-components.html">Connected Component Analysis</a></td></tr>
-      <tr><td> </td><td><a href="https://datacarpentry.org/image-processing/09-challenges.html">Capstone Challenge</a></td></tr>
+      <tr><td>Morning</td><td><a href="https://cobalt-casco.github.io/image-processing/06-blurring.html">Blurring Images</a></td></tr>
+      <tr><td> </td> <td> <a href="https://cobalt-casco.github.io/image-processing/07-thresholding.html">Thresholding</a></td></tr>
+      <tr><td>Afternoon</td><td><a href="https://cobalt-casco.github.io/image-processing/08-connected-components.html">Connected Component Analysis</a></td></tr>
+      <tr><td> </td><td><a href="https://cobalt-casco.github.io/image-processing/09-challenges.html">Capstone Challenge</a></td></tr>
     </table>
   </div>
 </div>
@@ -70,15 +70,15 @@ The schedule for the different curricula are listed here:
 	<td>Before starting</td>
 	<td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
       </tr>
-      <tr><td>Morning</td> <td> <a href="https://datacarpentry.org/spreadsheet-ecology-lesson/">Data Organization in Spreadsheets</a></td></tr>
-      <tr><td> </td><td><a href="https://datacarpentry.org/OpenRefine-ecology-lesson/">OpenRefine for Data Cleaning</a></td></tr>
+      <tr><td>Morning</td> <td> <a href="https://cobalt-casco.github.io/spreadsheet-ecology-lesson/">Data Organization in Spreadsheets</a></td></tr>
+      <tr><td> </td><td><a href="https://cobalt-casco.github.io/OpenRefine-ecology-lesson/">OpenRefine for Data Cleaning</a></td></tr>
       <tr>
         <td>Afternoon</td>
         <td>
           {% if site.flavor == "r" %}
-          <a href="https://datacarpentry.org/R-ecology-lesson/">Introduction to R</a>
+          <a href="https://cobalt-casco.github.io/R-ecology-lesson/">Introduction to R</a>
           {% elsif site.flavor == "python" %}
-          <a href="https://datacarpentry.org/python-ecology-lesson/">Introduction to Python</a>
+          <a href="https://cobalt-casco.github.io/python-ecology-lesson/">Introduction to Python</a>
           {% else %}
           {% include warning-flavor.html %}
           {% endif %}
@@ -92,15 +92,15 @@ The schedule for the different curricula are listed here:
       <tr> <td>Morning</td>
         <td>
           {% if site.flavor == "r" %}
-          <a href="https://datacarpentry.org/R-ecology-lesson/">Continuation of R: Data analysis and Visualization</a>
+          <a href="https://cobalt-casco.github.io/R-ecology-lesson/">Continuation of R: Data analysis and Visualization</a>
           {% elsif site.flavor == "python" %}
-          <a href="https://datacarpentry.org/python-ecology-lesson/">Continuation of Python: Data analysis and Visualization</a>
+          <a href="https://cobalt-casco.github.io/python-ecology-lesson/">Continuation of Python: Data analysis and Visualization</a>
           {% else %}
           {% include warning-flavor.html %}
           {% endif %}
         </td>
       </tr>
-      <tr> <td>Afternoon</td><td><a href="https://datacarpentry.org/sql-ecology-lesson/">Data Management with SQL</a></td></tr>
+      <tr> <td>Afternoon</td><td><a href="https://cobalt-casco.github.io/sql-ecology-lesson/">Data Management with SQL</a></td></tr>
       <tr>
 	<td>Evening</td>
 	<td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
@@ -123,17 +123,17 @@ The schedule for the different curricula are listed here:
 	<td>Before starting</td>
 	<td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
       </tr>
-      <tr><td>Morning</td> <td> <a href="https://datacarpentry.org/organization-genomics/">Project Organization and Management</a></td></tr>
-      <tr><td> </td><td><a href="https://datacarpentry.org/shell-genomics/">Introduction to the Command Line</a></td></tr>
-      <tr><td>Afternoon</td><td><a href="https://datacarpentry.org/wrangling-genomics/">Data Wrangling and Processing</a></td></tr>
+      <tr><td>Morning</td> <td> <a href="https://cobalt-casco.github.io/organization-genomics/">Project Organization and Management</a></td></tr>
+      <tr><td> </td><td><a href="https://cobalt-casco.github.io/shell-genomics/">Introduction to the Command Line</a></td></tr>
+      <tr><td>Afternoon</td><td><a href="https://cobalt-casco.github.io/wrangling-genomics/">Data Wrangling and Processing</a></td></tr>
 			<tr> <td>Evening</td> <td>END</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-			<tr><td>Morning</td><td><a href="https://datacarpentry.org/wrangling-genomics/">Continuation: Data Wrangling and Processing</a></td></tr>
-			<tr><td>Afternoon</td><td><a href="https://datacarpentry.org/cloud-genomics/">Introduction to Cloud Computing for Genomics</a></td></tr>
+			<tr><td>Morning</td><td><a href="https://cobalt-casco.github.io/wrangling-genomics/">Continuation: Data Wrangling and Processing</a></td></tr>
+			<tr><td>Afternoon</td><td><a href="https://cobalt-casco.github.io/cloud-genomics/">Introduction to Cloud Computing for Genomics</a></td></tr>
       <tr>
 	<td>Evening</td>
 	<td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
@@ -156,17 +156,17 @@ The schedule for the different curricula are listed here:
 	<td>Before starting</td>
 	<td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
       </tr>
-      <tr><td>Morning</td> <td> <a href="https://datacarpentry.org/spreadsheets-socialsci/">Data Organization in Spreadsheets</a></td></tr>
-      <tr><td> </td><td><a href="https://datacarpentry.org/openrefine-socialsci/">OpenRefine for Data Cleaning</a></td></tr>
-      <tr><td>Afternoon</td><td><a href="https://datacarpentry.org/r-socialsci/">Introduction to R</a></td></tr>
+      <tr><td>Morning</td> <td> <a href="https://cobalt-casco.github.io/spreadsheets-socialsci/">Data Organization in Spreadsheets</a></td></tr>
+      <tr><td> </td><td><a href="https://cobalt-casco.github.io/openrefine-socialsci/">OpenRefine for Data Cleaning</a></td></tr>
+      <tr><td>Afternoon</td><td><a href="https://cobalt-casco.github.io/r-socialsci/">Introduction to R</a></td></tr>
       <tr> <td>Evening</td> <td>END</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>Morning</td> <td><a href="https://datacarpentry.org/r-socialsci/">Continuation of R: Data Analysis & Visualization</a></td></tr>
-      <tr> <td>Afternoon</td><td><a href="https://datacarpentry.org/sql-socialsci/">Data Management with SQL</a></td></tr>
+      <tr> <td>Morning</td> <td><a href="https://cobalt-casco.github.io/r-socialsci/">Continuation of R: Data Analysis & Visualization</a></td></tr>
+      <tr> <td>Afternoon</td><td><a href="https://cobalt-casco.github.io/sql-socialsci/">Data Management with SQL</a></td></tr>
       <tr>
 	<td>Evening</td>
 	<td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
@@ -191,25 +191,25 @@ The schedule for the different curricula are listed here:
 	<td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
       </tr>
       <tr>
-        <td>Morning</td>
-        <td><a href="https://datacarpentry.org/organization-geospatial/">Introduction to Geospatial Concepts</a>
+        <td> Morning </td>
+        <td><a href="https://cobalt-casco.github.io/r-intro-geospatial/">Introduction to R for Geospatial Data</a></td>
+      </tr>
+     <tr>
+        <td>Afternoon</td>
+        <td><a href="https://cobalt-casco.github.io/organization-geospatial/">Introduction to Geospatial Concepts</a>
         </td>
       </tr>
       <tr>
-        <td> </td>
-        <td><a href="https://datacarpentry.org/r-intro-geospatial/">Introduction to R for Geospatial Data</a></td>
-      </tr>
-      <tr>
-        <td>Afternoon</td>
-        <td><a href="https://datacarpentry.org/r-intro-geospatial/">Introduction to R for Geospatial Data (continued)</a></td>
+        <td></td>
+        <td><a href="https://cobalt-casco.github.io/r-raster-vector-geospatial/">Introduction to Geospatial Raster and Vector Data with R</a> (Part 1)</td>
       </tr>
       <tr>
         <td></td>
-        <td><a href="https://datacarpentry.org/r-raster-vector-geospatial/">Introduction to Geospatial Raster and Vector Data with R</a> (Part 1)</td>
+        <td>Begin to work on projects</td>
       </tr>
       <tr>
         <td>Evening</td>
-        <td>END</td>
+        <td>END - Dinner on your own</td>
       </tr>
     </table>
   </div>
@@ -217,19 +217,39 @@ The schedule for the different curricula are listed here:
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>Morning</td> <td><a href="https://datacarpentry.org/r-raster-vector-geospatial/">Introduction to Geospatial Raster and Vector Data with R</a> (Part 2)</td></tr>
-      <tr> <td>Afternoon</td><td><a href="https://datacarpentry.org/r-raster-vector-geospatial/">Introduction to Geospatial Raster and Vector Data with R</a> (Part 3)</td></tr>
+      <tr> <td>Morning</td> <td><a href="https://cobalt-casco.github.io/r-raster-vector-geospatial/">Introduction to Geospatial Raster and Vector Data with R</a> (Part 2)</td></tr>
+      <tr> <td>Afternoon</td><td><a href="https://cobalt-casco.github.io/r-raster-vector-geospatial/">Introduction to Geospatial Raster and Vector Data with R</a> (Part 3)</td></tr>
       <tr>
 	<td>Evening</td>
-	<td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
+	<td>Dinner Together? Let's discuss!</td>
       </tr>
       <tr>
 	<td> </td>
-	<td> END </td>
       </tr>
     </table>
   </div>
 </div>
+
+<div class="row">        <!-- days 3 -->
+  <div class="col-md-6"> <!-- left column -->
+    <h3>Day 3</h3>
+    <table class="table table-striped">
+      <tr>               <!-- row 1   -->
+        <td>Morning</td>        <!-- time    -->
+        <td>Shiny Web apps in R</td>        <!-- content -->
+      </tr>
+      <tr>               <!-- row 2   -->
+        <td>Afternoon</td>        <!-- time    -->
+        <td>Start your projects!</td>        <!-- content -->
+      </tr>
+      <tr>               <!-- row 3   -->
+        <td>Evening</td>        <!-- time    -->
+        <td>Depart!</td>        <!-- content -->
+      </tr>
+    </table>
+  </div>
+</div>
+
 
 {% else %}
 {% include warning-curriculum.html %}
