--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -187,11 +187,11 @@ The schedule for the different curricula are listed here:
     <h3>Day 1</h3>
     <table class="table table-striped">
       <tr>
-	<td>Before starting</td>
-	<td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
+	<td>Morning</td>
+	<td>Breakfast and Schmooze starting at 8:30, class at 9:00</td>
       </tr>
       <tr>
-        <td> Morning </td>
+        <td>  </td>
         <td><a href="https://cobalt-casco.github.io/r-intro-geospatial/">Introduction to R for Geospatial Data</a></td>
       </tr>
      <tr>
@@ -204,10 +204,6 @@ The schedule for the different curricula are listed here:
         <td><a href="https://cobalt-casco.github.io/r-raster-vector-geospatial/">Introduction to Geospatial Raster and Vector Data with R</a> (Part 1)</td>
       </tr>
       <tr>
-        <td></td>
-        <td>Begin to work on projects</td>
-      </tr>
-      <tr>
         <td>Evening</td>
         <td>END - Dinner on your own</td>
       </tr>
@@ -217,7 +213,13 @@ The schedule for the different curricula are listed here:
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>Morning</td> <td><a href="https://cobalt-casco.github.io/r-raster-vector-geospatial/">Introduction to Geospatial Raster and Vector Data with R</a> (Part 2)</td></tr>
+     <tr>
+	<td>Morning</td>
+	<td>Breakfast and Schmooze starting at 8:30, class at 9:00</td>
+      </tr>
+      <tr> 
+      <td></td> 
+      <td><a href="https://cobalt-casco.github.io/r-raster-vector-geospatial/">Introduction to Geospatial Raster and Vector Data with R</a> (Part 2)</td></tr>
       <tr> <td>Afternoon</td><td><a href="https://cobalt-casco.github.io/r-raster-vector-geospatial/">Introduction to Geospatial Raster and Vector Data with R</a> (Part 3)</td></tr>
       <tr>
 	<td>Evening</td>
@@ -234,8 +236,12 @@ The schedule for the different curricula are listed here:
   <div class="col-md-6"> <!-- left column -->
     <h3>Day 3</h3>
     <table class="table table-striped">
+           <tr>
+	<td>Morning</td>
+	<td>Breakfast and Schmooze starting at 8:30, class at 9:00</td>
+      </tr>
       <tr>               <!-- row 1   -->
-        <td>Morning</td>        <!-- time    -->
+        <td></td>        <!-- time    -->
         <td>Shiny Web apps in R</td>        <!-- content -->
       </tr>
       <tr>               <!-- row 2   -->
