--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -188,7 +188,7 @@ The schedule for the different curricula are listed here:
     <table class="table table-striped">
       <tr>
 	<td>Morning</td>
-	<td>Breakfast and Schmooze starting at 8:30, class at 9:00</td>
+	<td>Breakfast and Introductions starting at 8:30, class at 9:00</td>
       </tr>
       <tr>
         <td>  </td>
