update with shiny link

--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -242,7 +242,7 @@ The schedule for the different curricula are listed here:
       </tr>
       <tr>               <!-- row 1   -->
         <td></td>        <!-- time    -->
-        <td>Shiny Web apps in R</td>        <!-- content -->
+        <td><a href="https://cobalt-casco.github.io/r-shiny-geospatial/"></a>Shiny Web apps in R</a></td>        <!-- content -->
       </tr>
       <tr>               <!-- row 2   -->
         <td>Afternoon</td>        <!-- time    -->
